--- a/alarm_app/pubspec.yaml
+++ b/alarm_app/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  sqflite: ^2.4.0
+  flutter_local_notifications: ^17.2.3
+  dotted_border: ^2.1.0
+  provider: ^6.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
